# fastapi-htmx-starter

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  cli.py  main.py
app/api/: auth.py  dependencies.py  items.py  user.py
app/core/: config.py  database.py  users.py
app/models/: item.py  user.py
app/schemas/: item.py  user.py
app/static/css/: custom.css
app/templates/: base.jinja2  index.jinja2  profile.jinja2
app/templates/auth/: login.jinja2  register.jinja2
app/templates/items/: _edit_form.jinja2  _item_row.jinja2  _table.jinja2  index.jinja2
app/templates/partials/: auth_links.jinja2
app/tests/: __init__.py  conftest.py  test_main.py
